001-IntroToKubernetes/Student/Resources/Challenge 10/template-web-ingress-deploy.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: mycontentweb
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: content-web-v2
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
    host: mycontentweb.eastus.cloudapp.azure.com  # Leave this line commented out until Part 2b
